Fix word wrap issues with very long strings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,6 +168,14 @@ nav {
     box-shadow: none;
 }
 
+.title,
+#title,
+.category,
+.post-content,
+.comment-content {
+    word-wrap: anywhere;
+}
+
 .title:hover {
     color: #ff4000;
 }
